<resources>
    <string name="app_name">goodeat</string>
    <string name="welcometxt">飯飯伴 \n 有自己人撐住真好</string>

    <string name="use_login">會員登入</string>
    <string name="email">email 輸入驗證碼</string>
    <string name="ok">確認</string>

    <string name="timenow">09：00</string>
    <string name="plasekeyindate">請輸入您今日的數據</string>
    <string name="kg">kg</string>
    <string name="bodyfat">體脂</string>
    <string name="percentage">%</string>
    <string name="bodyinfo_msg">您尚餘 20 天便完成 90 天減肥之旅!</string>
    <string name="bodyinfo_msg1">上磅這個行為是希望提醒您 \n 我們在建立新的生活習慣中 \n 不要輕易放棄成為全新的您</string>

    <string name="baseinfo">基本資料</string>
    <string name="username_title">UserName</string>
    <string name="baseuserinfo">基本簡介</string>
    <string name="healthystate">健康狀態</string>
    <string name="eatedstate">飲食狀態</string>
    <string name="schedule_sports">作息與運動</string>
    <string name="target_setting">目標設定</string>

    <string name="hellouser">你好，Zoey</string>
    <string name="dietcalendar">飲食月曆</string>
    <string name="diary">每天日記</string>
    <string name="messageboard">公告版</string>
    <string name="reserve">預約跟進</string>
    <string name="portionsize">飲食份量</string>
    <string name="aboutwe">關於我們</string>
    <string name="eattime">早餐/午餐/晚餐/額外</string>

    <string name="username">姓名</string>
    <string name="phone">電話</string>
    <string name="profession">職業</string>
    <string name="height">身高</string>
    <string name="waistline">腰圍</string>
    <string name="age">年齡</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="birthday">生日</string>
    <string name="birthday_keyin">年/月/日</string>
    <string name="address">居住地</string>
    <string name="weight">體重</string>
    <string name="hips">臀圍</string>
    <string name="visceralfat">內臟脂肪</string>
    <string name="side">側面</string>
    <string name="front">正面</string>
    <string name="reverse">背面</string>
    <string name="baseuserinfo_msg">提醒:每一個月需要更新身型圖片呦!</string>
    <string name="baseuserinfo_msg1">請放心!以上資料皆會保密，除非是獲得您的許可!</string>

    <string name="selectgallery">從圖庫選擇</string>
    <string name="scan">拍照</string>
    <string name="reimg">移除目前照片</string>

    <string name="insomnia">容易失眠</string>
    <string name="handsfeetcold">手腳冰冷</string>
    <string name="constipate">便祕</string>
    <string name="thyroid">甲狀腺</string>
    <string name="easyEdema">易水腫</string>
    <string name="menstruationnotsmooth">經期不順</string>
    <string name="endocrine">內分泌</string>
    <string name="easycatarrh">易感冒</string>
    <string name="stomachache">胃痛易脹氣</string>
    <string name="otherreplenish">其他補充</string>
    <string name="family_medicalhistory">家族病史</string>
    <string name="have">有</string>
    <string name="none">無</string>
    <string name="Replenish">補充</string>
    <string name="takemedicine">服藥</string>
    <string name="menstruation">月經是否正常</string>
    <string name="no">否</string>
    <string name="about">約每</string>
    <string name="weekmonth">星期/月</string>
    <string name="big">量大</string>
    <string name="middle">量中</string>
    <string name="Small">量小</string>
    <string name="pain">痛楚</string>
    <string name="verypainful">很痛</string>
    <string name="acceptable">可接受</string>
    <string name="indifferent">無感</string>
    <string name="yes">是</string>

    <string name="sleep">幾點睡覺</string>
    <string name="getup">幾點起床</string>
    <string name="sleephours">睡眠時數</string>
    <string name="exercisehabits">運動習慣</string>
    <string name="project">項目</string>
    <string name="week">每周</string>
    <string name="frequency">次</string>
    <string name="time">時間</string>
    <string name="hour">小時</string>
    <string name="everydefecation">每日排便嗎?</string>
    <string name="day">一日</string>
    <string name="everydaypee">每天小便</string>
    <string name="ampm">am/pm</string>
    <string name="hrs">hrs</string>
    <string name="schedule_sports_Replenish">你有想特別補充甚麼讓我們知道嗎?</string>

    <string name="question1">1.妳為什麼會想參加課程?</string>
    <string name="confidenceup">提高自信</string>
    <string name="healthyup">更健康</string>
    <string name="revision_menstruation">想要調經</string>
    <string name="other">或其他</string>
    <string name="question2">2.妳希望可以減?</string>
    <string name="nowweight">體重從現在</string>
    <string name="from">到</string>
    <string name="nowbodyfat">體脂從現在</string>
    <string name="cm">cm</string>
    <string name="nowwaistline">腰圍從現在</string>
    <string name="question3">3.達成目標會給自己什麼鼓勵?</string>
    <string name="question4">4.對此刻的自己說一句話?</string>

    <string name="question5">1.一天通常吃</string>
    <string name="question6">2.有吃宵夜習慣嗎?</string>
    <string name="question7">3.每日飲水量：(間距挑選)</string>
    <string name="question8">4.你會覺得自己是：(可複選)</string>
    <string name="question9">5.試過那些減肥方式：(可複選)</string>
    <string name="meal">餐</string>
    <string name="eatedstate_frequency">頻率</string>
    <string name="frequencybyweek">次/週</string>
    <string name="snack">零食控</string>
    <string name="starch">澱粉控</string>
    <string name="dessert">甜品控</string>
    <string name="friedfood">炸物控</string>
    <string name="meat">肉食控</string>
    <string name="drinks">飲品控</string>
    <string name="medicine">西藥/中藥</string>
    <string name="intermittent_fasting">間歇性斷食</string>
    <string name="ketogenic_diet">生酮飲食</string>
    <string name="lowcarbdiet">低碳飲食</string>
    <string name="simplydieting">單純節食</string>
    <string name="eatedstate_other">其他：</string>

    <string name="aboutwe_message">
        創辦人 Zoey 過去試過不同減肥方式 \n
        低碳飲食、168、保健食品減重、 \n
        每天高強度運動、一星期蔬菜湯排毒等等 \n
        踏入 30 歲後代謝更加變慢，方法不意湊效 \n\n
        為透過伴食 APP 跟進飲食三餐，\n
        <b>每天微調，每天進步，每天建立飲食正確認知</b> \n
        也順利找出瘦不下來的盲點 \n\n
        「不是我無能，只是以前方法不貼地」 \n
        「原來有人陪伴減肥的感覺，真是好好」 \n\n
        減重，只是重新認識自己的過程，\n
        我們陪你一步步成為理想中的自己
    </string>

    <string-array name="time">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>

    <string name="mainfood_txt">主食</string>
    <string name="meat_txt">肉食</string>
    <string name="vegetables_txt">蔬菜</string>
    <string name="fruit_txt">水果</string>
    <string name="openmanual">解鎖生存手冊</string>
    <string name="portionsize_msg">
        建立我們的共同語崖 \n
        不用擔心學不會 \n
        會一步步教你!
    </string>

    <string name="dietcalendar_msg">
        ♥ 愛心是生理期時的標記 \n
        點進去就可以為自己寫下紀錄囉!
    </string>

    <string name="menstruationlog">紀錄月經</string>
    <string name="diarylook">每天日記總覽</string>

    <string name="bloodvolume">今天血量</string>
    <string name="bloodcolor">今天血色</string>
    <string name="paintoday">今天痛感</string>
    <string name="weighttoday">今天體重</string>
    <string name="feel">今天心情</string>

    <string name="servingsize">今日攝取份量</string>
    <string name="mainfood">8主</string>
    <string name="meat1">6肉</string>
    <string name="vegetables">3菜</string>
    <string name="fruit">2果</string>
    <string name="Moisture">一天水分的攝取量</string>
    <string name="ml">ml</string>
    <string name="breakfast">早餐</string>
    <string name="allkindsportionsize">_主_肉_菜_果</string>
    <string name="Lunch">午餐</string>
    <string name="dinner">晚餐</string>
    <string name="other_eat">額外</string>
    <string name="sports">運動</string>
    <string name="remaining_portion">你剩下以下份量</string>
    <string name="Dietblindspots">導師寫關於您的飲食盲點</string>

    <string name="foodimg">食物的照片呈現區 \n (最多 6 張)</string>
    <string name="uploadimg"><u>上傳照片</u></string>
    <string name="foodname">名稱</string>
    <string name="portionsize_eatinfo">份量</string>
    <string name="dietary_judgment">建立飲食判斷力</string>
    <string name="writemoisture">水分總攝取量</string>
    <string name="excretion">排便</string>
    <string name="haveexcretion">有排</string>
    <string name="noexcretion">無排</string>
    <string name="other_eatnfo">其他</string>
    <string name="diarrhea">(如肚瀉)</string>
    <string name="powerspeech">給自己一句有力量的話</string>

    <string name="messageboard_details_title">最新飲食計畫</string>
    <string name="messageboard_details_item">主食類食物不要和油摻和再一起</string>
    <string name="messageboard_details_msg">米、麵等主食類食物吸水效果非常好，舉例當你把滷肉汁淋到白飯上時，一下子肉汁就會滲入到米粒當中，飯吃起來馬上就會變鹹。同樣的道理，如果你用油炒麵或炒飯，或把油蔥、肉燥汁淋到飯或麵上，米飯和麵條也會馬上吸入這些油脂。一碗白飯熱量為 280 大卡，但油脂一湯匙就有半碗飯的熱量，一盤炒飯若飯多、油多，再加上一大堆其他配料，那麼熱量動輒七、八百大卡也就不難理解了。</string>

    <string name="week1">07/01 \n (一)</string>
    <string name="week2">07/02 \n (二)</string>
    <string name="week3">07/03 \n (三)</string>
    <string name="week4">07/04 \n (四)</string>
    <string name="week5">07/05 \n (五)</string>
    <string name="week6">07/06 \n (六)</string>
    <string name="week7">07/07 \n (日)</string>

    <string name="msg">MSG</string>
    <string name="phonecall">PHONE CALL</string>
    <string name="breakfast_time">9-10：00am</string>
    <string name="Lunch_time">11-12：00am</string>
    <string name="dinner_time">13-14：00am</string>
    <string name="reserve_button">預約</string>
    <string name="reserve_msg">您尚餘 20 次與飯友聊天唷!</string>
    <string name="coming">即將到來</string>
    <string name="finish">已經完成</string>
    <string name="coming_time">
        2023-12-20 \n
        13-13:30 pm \n
        MSG
    </string>
    <string name="finish_time">
        2023-12-06 \n
        13-13:30 pm \n
        MSG
    </string>
    <string name="change_reserve"><u>更改預約</u></string>
    <string name="attend">出席</string>
    <string name="reserve_msg2">
        貼心提醒：24 小時前可更改預約 \n
        24 小時候就無法更改囉!
    </string>
    <string name="permission_necessary">需要權限</string>
</resources>

