<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/FFe5d6c4"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/title"
        layout="@layout/page_title_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/login_shape"
        android:layout_marginTop="@dimen/distance_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/distance_5"
            android:text="@string/messageboard_details_title"
            android:textColor="@color/FF16461b"
            android:textSize="@dimen/txtsize_18"
            android:textStyle="bold"/>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/FFd8d9d9"
            android:layout_marginTop="@dimen/distance_5"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/imgupload" />

        <TextView
            android:id="@+id/messageboard_details_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_margin="@dimen/distance_5"
            android:text="@string/messageboard_details_item"
            android:textColor="@color/FF16461b"
            android:textSize="@dimen/txtsize_18"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/messageboard_details_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_margin="@dimen/distance_5"
            android:text="@string/messageboard_details_msg"
            android:textColor="@color/FF16461b"
            android:textSize="@dimen/txtsize_18"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>